src/objects/Creative_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Creative_Contact_Email__c</fullName>
        <label>Creative Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Creative_Contact_Phone__c</fullName>
        <label>Creative Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Creative_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Creative Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Creative Profiles</relationshipLabel>
        <relationshipName>Creative_Profiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Creative Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Creative Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creative Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>